Fixing wrong colors

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,7 +85,7 @@ input[type="text"]  {
 }
 
 .sub-header input[type="text"] {
-  background-color: #FFE57F;
+  background-color: #B39DDB;
   margin: .1em;
 }
 
